--- a/package.json
+++ b/package.json
@@ -28,25 +28,23 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
-    "@edx/frontend-component-footer": "12.0.0",
-    "@edx/frontend-component-header": "4.0.0",
-    "@edx/frontend-platform": "4.2.0",
-    "@edx/paragon": "20.28.5",
-    "@fortawesome/fontawesome-svg-core": "1.2.36",
-    "@fortawesome/free-brands-svg-icons": "5.15.4",
-    "@fortawesome/free-regular-svg-icons": "5.15.4",
-    "@fortawesome/free-solid-svg-icons": "5.15.4",
-    "@fortawesome/react-fontawesome": "0.2.0",
+    "@edx/frontend-platform": "4.6.0",
+    "@edx/paragon": "20.45.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-brands-svg-icons": "6.4.0",
+    "@fortawesome/free-regular-svg-icons": "6.4.0",
+    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tensorflow-models/blazeface": "0.0.7",
     "@tensorflow/tfjs-converter": "3.21.0",
     "@tensorflow/tfjs-core": "3.21.0",
     "bowser": "2.11.0",
     "classnames": "2.3.2",
-    "core-js": "3.27.1",
+    "core-js": "3.30.0",
     "font-awesome": "4.7.0",
     "form-urlencoded": "6.1.0",
     "formdata-polyfill": "4.0.10",
-    "history": "4.10.1",
+    "history": "5.3.0",
     "jslib-html5-camera-photo": "3.3.4",
     "lodash.camelcase": "4.3.0",
     "lodash.debounce": "4.0.8",
@@ -63,32 +61,32 @@
     "qs": "6.11.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-helmet": "6.1.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "7.2.9",
-    "react-router": "5.2.1",
-    "react-router-dom": "5.3.0",
+    "react-router": "5.3.4",
+    "react-router-dom": "5.3.4",
     "react-router-hash-link": "2.4.3",
     "react-scrollspy": "3.4.3",
     "react-transition-group": "4.4.5",
     "redux": "4.2.1",
     "redux-devtools-extension": "2.13.9",
     "redux-logger": "3.0.6",
-    "redux-saga": "1.1.3",
-    "redux-thunk": "2.3.0",
+    "redux-saga": "1.2.3",
+    "redux-thunk": "2.4.2",
     "regenerator-runtime": "0.13.11",
-    "reselect": "4.0.0",
+    "reselect": "4.1.7",
     "universal-cookie": "4.0.4"
   },
   "devDependencies": {
-    "@edx/browserslist-config": "1.1.1",
-    "@edx/frontend-build": "12.8.6",
-    "@edx/reactifex": "1.1.0",
+    "@edx/browserslist-config": "^1.1.1",
+    "@edx/frontend-build": "12.8.61",
+    "@edx/reactifex": "^2.1.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
-    "enzyme": "3.11.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "1.15.7",
     "react-test-renderer": "16.14.0",
     "reactifex": "1.1.1",
-    "redux-mock-store": "1.5.4"
+    "redux-mock-store": "^1.5.4"
   }
 }
