--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
     "prepare": "npm run build",
-    "snapshot": "fedx-scripts jest --updateSnapshot",
-    "start": "fedx-scripts webpack-dev-server --progress",
-    "test": "TZ=UTC fedx-scripts jest --coverage --passWithNoTests"
+    "start": "fedx-scripts webpack-dev-server --progress"
   },
   "bugs": {
     "url": "https://github.com/openedx/frontend-app-account/issues"
@@ -28,8 +26,6 @@
     "extends @edx/browserslist-config"
   ],
   "dependencies": {
-    "@edx/frontend-component-footer": "github:gymnasium/frontend-component-footer#gym.palm.4",
-    "@edx/frontend-component-header": "github:gymnasium/frontend-component-header#gym.palm.4",
     "@edx/frontend-platform": "4.2.0",
     "@edx/paragon": "20.46.3",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
