--- a/.env.development
+++ b/.env.development
@@ -26,9 +26,9 @@ SITE_NAME=localhost
 STUDIO_BASE_URL=''
 SUPPORT_URL='http://localhost:18000/support'
 USER_INFO_COOKIE_NAME='edx-user-info'
-ENABLE_COPPA_COMPLIANCE=''
-ENABLE_DOB_UPDATE=''
-MARKETING_EMAILS_OPT_IN=''
+ENABLE_COPPA_COMPLIANCE=false
+ENABLE_DOB_UPDATE=false
+MARKETING_EMAILS_OPT_IN=false
 APP_ID=
 MFE_CONFIG_API_URL=
 PASSWORD_RESET_SUPPORT_LINK='mailto:support@example.com'
