--- a/.env.development
+++ b/.env.development
@@ -15,7 +15,7 @@ LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 LOGOUT_URL='http://localhost:18000/logout'
-MARKETING_SITE_BASE_URL='http://localhost:5335'
+MARKETING_SITE_BASE_URL='http://local.overhang.io'
 NODE_ENV='development'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 PORT=1997
