--- a/.env.development
+++ b/.env.development
@@ -8,13 +8,13 @@ ECOMMERCE_BASE_URL='http://localhost:18130'
 ENABLE_DEMOGRAPHICS_COLLECTION=''
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
-LMS_BASE_URL='http://localhost:18000'
-LOGIN_URL='http://localhost:18000/login'
+LMS_BASE_URL='http://local.edly.io:8000'
+LOGIN_URL='http://local.edly.io:8000/login'
 LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
-LOGOUT_URL='http://localhost:18000/logout'
-MARKETING_SITE_BASE_URL='http://localhost:5335'
+LOGOUT_URL='http://local.edly.io:8000/logout'
+MARKETING_SITE_BASE_URL='http://edly.io'
 NODE_ENV='development'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 PORT=1997
