--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
-BASE_URL='localhost:1997'
+BASE_URL='http://apps.local.edly.io:1997'
 CREDENTIALS_BASE_URL='http://localhost:18150'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 DEMOGRAPHICS_BASE_URL='http://localhost:18360'
@@ -19,9 +19,9 @@ NODE_ENV='development'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 PORT=1997
 PUBLISHER_BASE_URL=''
-REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
+REFRESH_ACCESS_TOKEN_ENDPOINT='http://local.edly.io:8000/login_refresh'
 SEGMENT_KEY=''
-SITE_NAME=localhost
+SITE_NAME='Gymnasium Local'
 STUDIO_BASE_URL=''
 SUPPORT_URL='http://localhost:18000/support'
 USER_INFO_COOKIE_NAME='edx-user-info'
