update env files

--- a/.env.test
+++ b/.env.test
@@ -14,7 +14,7 @@ LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 LOGOUT_URL='http://local.edly.io:8000/logout'
-MARKETING_SITE_BASE_URL='http://edly.io'
+MARKETING_SITE_BASE_URL='http://edly.io:8888'
 NODE_ENV=''
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 PUBLISHER_BASE_URL=''
