--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@edx/frontend-component-footer": "12.3.0",
     "@edx/frontend-component-header": "4.7.0",
     "@edx/frontend-platform": "5.5.4",
+    "@edx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#gym.quince.2",
     "@edx/paragon": "20.46.2",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "5.15.4",
@@ -43,6 +44,7 @@
     "bowser": "2.11.0",
     "classnames": "2.3.2",
     "core-js": "3.33.0",
+    "dompurify": "^3.1.0",
     "font-awesome": "4.7.0",
     "form-urlencoded": "6.1.4",
     "formdata-polyfill": "4.0.10",
