--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@edx/frontend-app-account",
-  "version": "1.0.0-semantically-released",
-  "description": "User account micro-frontend for Open edX",
+  "version": "1.0.0-gym.quince.3",
+  "description": "Gymnasium-specific MFE for account settings",
   "author": "edX",
   "license": "AGPL-3.0",
   "repository": {
