--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 DEMOGRAPHICS_BASE_URL='http://localhost:18360'
 DISCOVERY_API_BASE_URL=''
 ECOMMERCE_BASE_URL='http://localhost:18130'
-ENABLE_DEMOGRAPHICS_COLLECTION=''
+ENABLE_DEMOGRAPHICS_COLLECTION='false'
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
 LMS_BASE_URL='http://localhost:18000'
@@ -25,9 +25,9 @@ SITE_NAME=localhost
 STUDIO_BASE_URL=''
 SUPPORT_URL='http://localhost:18000/support'
 USER_INFO_COOKIE_NAME='edx-user-info'
-ENABLE_COPPA_COMPLIANCE=''
-ENABLE_ACCOUNT_DELETION=''
-ENABLE_DOB_UPDATE=''
+ENABLE_COPPA_COMPLIANCE='false'
+ENABLE_ACCOUNT_DELETION='false'
+ENABLE_DOB_UPDATE='false'
 MARKETING_EMAILS_OPT_IN=''
 APP_ID=
 MFE_CONFIG_API_URL=
