--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ DEMOGRAPHICS_BASE_URL='http://localhost:18360'
 DISCOVERY_API_BASE_URL=''
 ECOMMERCE_BASE_URL='http://localhost:18130'
 ENABLE_DEMOGRAPHICS_COLLECTION='false'
-FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
+FAVICON_URL=http://edly.io:8888/favicon.svg
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
 LMS_BASE_URL='http://localhost:18000'
 LOGIN_URL='http://localhost:18000/login'
@@ -14,18 +14,18 @@ LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 LOGOUT_URL='http://localhost:18000/logout'
-MARKETING_SITE_BASE_URL='http://localhost:5335'
+MARKETING_SITE_BASE_URL='http://edly.io:8888'
 NODE_ENV='development'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 PORT=1997
 PUBLISHER_BASE_URL=''
 REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
 SEGMENT_KEY=''
-SITE_NAME=localhost
+SITE_NAME='Gymnasium Dev'
 STUDIO_BASE_URL=''
 SUPPORT_URL='http://localhost:18000/support'
 USER_INFO_COOKIE_NAME='edx-user-info'
-ENABLE_COPPA_COMPLIANCE='false'
+ENABLE_COPPA_COMPLIANCE='true'
 ENABLE_ACCOUNT_DELETION='false'
 ENABLE_DOB_UPDATE='false'
 MARKETING_EMAILS_OPT_IN=''
