--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edx/frontend-app-account",
-  "version": "1.0.0-gym.redwood",
+  "version": "1.0.1-gym.redwood",
   "description": "Gymnasium-specific user account micro-frontend for Open edX",
   "author": "edX",
   "license": "AGPL-3.0",
@@ -35,6 +35,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@intercom/messenger-js-sdk": "^0.0.14",
     "@openedx/frontend-plugin-framework": "^1.2.2",
     "@openedx/gym-frontend": "git+https://git@github.com/gymnasium/gym-frontend-components.git#main",
     "@openedx/paragon": "22.0.0",
